# FIPS-APKs

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  ROADMAP.md
.github/workflows/: build.yaml
distroless/: BUILD.bazel
examples/: BUILD.bazel  HelloWorld.java
images/base/: image.yaml
images/java21/: fips.security  image.yaml  pkcs11-fips.cfg
rpm/: BUILD.bazel  extract.bzl  fetch.bzl
tests/fips/: COMPLIANCE.md  FipsComplianceTest.java  run-fips-tests.sh
tools/: BUILD.bazel  rpm_downloader.py  rpm_extract.py
