module(
    name = "fedora_distroless",
    version = "0.1.0",
)

# OCI image building rules
bazel_dep(name = "rules_oci", version = "2.2.7")

# Common Bazel utilities
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Python rules for helper scripts
bazel_dep(name = "rules_python", version = "1.8.3")

# Container image toolchain
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    # Temporary: pull existing distroless for comparison
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
    digest = "sha256:786007f631d22e8a1a5084c636ddc5e4b2e01aa40fbfd1f1ef9d1f51b4c6b6b6",
)
use_repo(oci, "distroless_base")

# Package rules for tar creation
bazel_dep(name = "rules_pkg", version = "0.9.1")
