# Distroless image building rules

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//rpm:fetch.bzl", "rpm_fetch")
load("//rpm:extract.bzl", "rpm_extract")

package(default_visibility = ["//visibility:public"])

# Fetch base RPMs
rpm_fetch(
    name = "filesystem_rpm",
    package = "filesystem",
    repo = "baseos",
)

rpm_fetch(
    name = "setup_rpm",
    package = "setup",
    repo = "baseos",
)

rpm_fetch(
    name = "basesystem_rpm",
    package = "basesystem",
    repo = "baseos",
)

# Extract RPMs
rpm_extract(
    name = "filesystem_extracted",
    rpm = ":filesystem_rpm",
)

rpm_extract(
    name = "setup_extracted",
    rpm = ":setup_rpm",
)

rpm_extract(
    name = "basesystem_extracted",
    rpm = ":basesystem_rpm",
)

# Create minimal passwd file
genrule(
    name = "passwd",
    outs = ["etc/passwd"],
    cmd = """
        mkdir -p $$(dirname $@)
        cat > $@ <<'EOF'
root:x:0:0:root:/root:/sbin/nologin
nobody:x:65534:65534:Nobody:/:/sbin/nologin
EOF
    """,
)

# Create minimal group file
genrule(
    name = "group",
    outs = ["etc/group"],
    cmd = """
        mkdir -p $$(dirname $@)
        cat > $@ <<'EOF'
root:x:0:
nobody:x:65534:
EOF
    """,
)

# Base distroless image
oci_image(
    name = "base",
    os = "linux",
    architecture = "amd64",
    tars = [
        ":filesystem_extracted",
    ],
)

# Load image to container runtime for testing
oci_load(
    name = "base_tarball",
    image = ":base",
    repo_tags = ["fedora-distroless:base"]
)
